feat: components を使う形に書き直し
