# packages/core/src/generated-msr/models/SongSummary.ts
@@ -1,0 +1,49 @@
+/**
+ * (c) MONSTER SIREN RECORD
+ * MSR original soundtrack website\'s schema https://monster-siren.hypergryph.com 
+ *
+ * OpenAPI spec version: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { HttpFile } from '../http/http.ts';
+
+export class SongSummary {
+    'cid': string;
+    'name': string;
+    'artistes': Array<string>;
+
+    static readonly discriminator: string | undefined = undefined;
+
+    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
+        {
+            "name": "cid",
+            "baseName": "cid",
+            "type": "string",
+            "format": ""
+        },
+        {
+            "name": "name",
+            "baseName": "name",
+            "type": "string",
+            "format": ""
+        },
+        {
+            "name": "artistes",
+            "baseName": "artistes",
+            "type": "Array<string>",
+            "format": ""
+        }    ];
+
+    static getAttributeTypeMap() {
+        return SongSummary.attributeTypeMap;
+    }
+
+    public constructor() {
+    }
+}
+
