# packages/core/src/generated-msr/models/all.ts
@@ -1,7 +1,7 @@
-export * from '../models/AlbumCidDetailGet200Response.ts'
-export * from '../models/AlbumCidDetailGet200ResponseData.ts'
-export * from '../models/AlbumCidDetailGet200ResponseDataSongsInner.ts'
-export * from '../models/AlbumsGet200Response.ts'
-export * from '../models/AlbumsGet200ResponseDataInner.ts'
-export * from '../models/SongCidGet200Response.ts'
-export * from '../models/SongCidGet200ResponseData.ts'
+export * from '../models/AlbumDetailResponse.ts'
+export * from '../models/AlbumDetails.ts'
+export * from '../models/AlbumSummary.ts'
+export * from '../models/AlbumsResponse.ts'
+export * from '../models/Song.ts'
+export * from '../models/SongDetailsResponse.ts'
+export * from '../models/SongSummary.ts'
