# packages/core/src/generated-msr/types/PromiseAPI.ts
@@ -1,13 +1,13 @@
 import { ResponseContext, RequestContext, HttpFile, HttpInfo } from '../http/http.ts';
 import { Configuration} from '../configuration.ts'
 
-import { AlbumCidDetailGet200Response } from '../models/AlbumCidDetailGet200Response.ts';
-import { AlbumCidDetailGet200ResponseData } from '../models/AlbumCidDetailGet200ResponseData.ts';
-import { AlbumCidDetailGet200ResponseDataSongsInner } from '../models/AlbumCidDetailGet200ResponseDataSongsInner.ts';
-import { AlbumsGet200Response } from '../models/AlbumsGet200Response.ts';
-import { AlbumsGet200ResponseDataInner } from '../models/AlbumsGet200ResponseDataInner.ts';
-import { SongCidGet200Response } from '../models/SongCidGet200Response.ts';
-import { SongCidGet200ResponseData } from '../models/SongCidGet200ResponseData.ts';
+import { AlbumDetailResponse } from '../models/AlbumDetailResponse.ts';
+import { AlbumDetails } from '../models/AlbumDetails.ts';
+import { AlbumSummary } from '../models/AlbumSummary.ts';
+import { AlbumsResponse } from '../models/AlbumsResponse.ts';
+import { Song } from '../models/Song.ts';
+import { SongDetailsResponse } from '../models/SongDetailsResponse.ts';
+import { SongSummary } from '../models/SongSummary.ts';
 import { ObservableAlbumApi } from './ObservableAPI.ts';
 
 import { AlbumApiRequestFactory, AlbumApiResponseProcessor} from "../apis/AlbumApi.ts";
@@ -26,7 +26,7 @@ export class PromiseAlbumApi {
      * 指定したアルバムの収録楽曲一覧を取得
      * @param cid アルバムの cid
      */
-    public albumCidDetailGetWithHttpInfo(cid: string, _options?: Configuration): Promise<HttpInfo<AlbumCidDetailGet200Response>> {
+    public albumCidDetailGetWithHttpInfo(cid: string, _options?: Configuration): Promise<HttpInfo<AlbumDetailResponse>> {
         const result = this.api.albumCidDetailGetWithHttpInfo(cid, _options);
         return result.toPromise();
     }
@@ -35,7 +35,7 @@ export class PromiseAlbumApi {
      * 指定したアルバムの収録楽曲一覧を取得
      * @param cid アルバムの cid
      */
-    public albumCidDetailGet(cid: string, _options?: Configuration): Promise<AlbumCidDetailGet200Response> {
+    public albumCidDetailGet(cid: string, _options?: Configuration): Promise<AlbumDetailResponse> {
         const result = this.api.albumCidDetailGet(cid, _options);
         return result.toPromise();
     }
@@ -43,7 +43,7 @@ export class PromiseAlbumApi {
     /**
      * リリース済みアルバムの一覧を取得
      */
-    public albumsGetWithHttpInfo(_options?: Configuration): Promise<HttpInfo<AlbumsGet200Response>> {
+    public albumsGetWithHttpInfo(_options?: Configuration): Promise<HttpInfo<AlbumsResponse>> {
         const result = this.api.albumsGetWithHttpInfo(_options);
         return result.toPromise();
     }
@@ -51,7 +51,7 @@ export class PromiseAlbumApi {
     /**
      * リリース済みアルバムの一覧を取得
      */
-    public albumsGet(_options?: Configuration): Promise<AlbumsGet200Response> {
+    public albumsGet(_options?: Configuration): Promise<AlbumsResponse> {
         const result = this.api.albumsGet(_options);
         return result.toPromise();
     }
@@ -79,7 +79,7 @@ export class PromiseSongsApi {
      * 指定した楽曲の詳細を取得
      * @param cid 楽曲の cid
      */
-    public songCidGetWithHttpInfo(cid: string, _options?: Configuration): Promise<HttpInfo<SongCidGet200Response>> {
+    public songCidGetWithHttpInfo(cid: string, _options?: Configuration): Promise<HttpInfo<SongDetailsResponse>> {
         const result = this.api.songCidGetWithHttpInfo(cid, _options);
         return result.toPromise();
     }
@@ -88,7 +88,7 @@ export class PromiseSongsApi {
      * 指定した楽曲の詳細を取得
      * @param cid 楽曲の cid
      */
-    public songCidGet(cid: string, _options?: Configuration): Promise<SongCidGet200Response> {
+    public songCidGet(cid: string, _options?: Configuration): Promise<SongDetailsResponse> {
         const result = this.api.songCidGet(cid, _options);
         return result.toPromise();
     }
